# SpaCE-GLUE

./: README.md  cli.py  pyproject.toml
data/: GRASP.py  GeoGramBench.py  PLUGH.py  RoomSpace.py  SPaRC.py  STBench.py  SpartQA.py  SpatialEval.py  StepGame.py  bAbI.py  base_dataset.py  grasp_evaluator.py  plugh_evaluator.py  spatialeval_evaluator.py  stbench_evaluator.py
evaluation/: evaluator.py
models/: base_model.py  openai_model.py  vllm_model.py
space_glue/: cli.py
space_glue/data/: GRASP.py  GeoGramBench.py  PLUGH.py  RoomSpace.py  SPaRC.py  STBench.py  SpartQA.py  SpatialEval.py  StepGame.py  bAbI.py  base_dataset.py  stbench_evaluator.py
space_glue/models/: openai_model.py  vllm_model.py
space_glue/workflow/: config_loader.py  runner.py
workflow/: config_loader.py  runner.py
