[project]
name = "space-glue"
version = "0.1.1"
description = "SpaCE-GLUE: Spatial Cognition Exercises – General Language Understanding Evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "datasets==3.6.0",
    "dill==0.3.8",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "geographiclib==2.1",
    "geopy==2.4.1",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.2.3",
    "idna==3.11",
    "jiter==0.12.0",
    "levenshtein==0.27.3",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "numpy==2.3.5",
    "openai==2.8.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "propcache==0.4.1",
    "pyarrow==22.0.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-levenshtein==0.27.3",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.3",
    "requests==2.32.5",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sparc-puzzle==0.3.4",
    "sympy==1.14.0",
    "tqdm==4.67.1",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[project.scripts]
space-glue = "space_glue.cli:main"